sites/all/themes/heybabies/sass/_main.scss
/* ... */
.commerce_coupon
{
    float: right;
    clear: right;
    width: 300px;
    padding-top: 10px;
    
    .form-item
    {
        border-bottom: 1px solid $seafoam;
        margin: 0;
    }
    label
    {
        font-weight: 400;
        float: left;
        width: 40%;
        color: $seafoam;
        line-height: 2;
        margin-right: -2px;
    }
    input
    {
        display: block;
        width: 50%;
        padding: 0 5%;
        border: 0;
        outline-color: $seafoam;
        color: $seafoam;
        font-size: 1em;
        line-height: 2;
        font-weight: 400;
        
        &.error
        {
            border-width: 1px;
        }
    }
}
.customer_profile_shipping,
.customer_profile_billing,
.account.form-wrapper,
.payment-details-form
{
    overflow: hidden;
    padding-bottom: 1em;
    max-width: 560px;
    
    .form-item
    {
        clear: left;
        border-bottom: 1px solid $seafoam;
        overflow: hidden;
    }
    label
    {
        float: left;
        width: 33.333%;
        color: $seafoam;
        font-weight: 500;
        line-height: 2;
        margin-right: -2px;
        text-transform: lowercase;
    }
    .form-type-textfield,
    .form-type-emailfield
    {
        input
        {
            display: block;
            border: 0;
            font-size: 1em;
            width: 63.666%;
            padding: 0 1.5%;
            outline-color: $seafoam;
            line-height: 2;
            color: #333;
            font-weight: 400;
            
            &.error
            {
                border: 1px solid red;
            }
        }
    }
    .form-required
    {
        display: none;
    }
}
.payment-details-form
{
    .form-item-commerce-payment-payment-details-credit-card-exp-month,
    .form-item-commerce-payment-payment-details-credit-card-exp-year
    {
        border-bottom: 0;
    }
}
div.addressfield-container-inline
{
    &:after
    {
        display: none;
    }
    & > div.form-item
    {
        float: none;
        margin-right: 0;
    }
}
.commerce-customer-profile-copy .form-item
{
    border: 0;
    text-transform: lowercase;
    margin: 0;
    
    label
    {
        float: none;
        line-height: normal;
    }
}
.checkout-continue
{
    display: inline-block;
    width: 160px;
    color: $seafoam;
    background: $seafoam;
    color: white;
    border: 0;
    border-radius: 4px;
    cursor: pointer;
    -webkit-appearance: none;
    font-size: 1em;
    text-align: center;
    line-height: 48px;
    margin-right: 20px;
    outline-color: $seafoam;
    transition: all 0.2s;
    
    &:hover
    {
        background: #8ac5ab;
    }
}
.checkout-back
{
    -webkit-appearance: none;
    border: 0;
    background: none;
    color: $seafoam;
    text-decoration: underline;
    cursor: pointer;
    display: inline-block;
    vertical-align: middle;
    font-size: 0.9em;
    line-height: 1.5;
    padding: 0 10px;
    outline-color: $seafoam;
}
.review-information .checkout_account
{
    overflow: hidden;
    padding-bottom: 1em;
    
    label
    {
        display: none;
    }
    .form-item
    {
        margin: 0;
    }
}
.commerce_shipping
{
    label[for^=edit-commerce-shipping-shipping-service-ups],
    label[for^=edit-commerce-shipping-shipping-service-easypost-ups]
    {
        padding-left: 24px;
        background: url(../img/logo_ups.svg) no-repeat 2px center;
    }
    label[for^=edit-commerce-shipping-shipping-service-canadapost],
    label[for^=edit-commerce-shipping-shipping-service-easypost-cpc]
    {
        padding-left: 24px;
        background: url(../img/logo_cpc.svg) no-repeat 0 center;
    }
    
    margin-bottom: 30px;
}
.commerce_payment .hidden
{
    display: none;
}
.payment-details-form
{
    max-width: 560px;
    
    .form-item
    {
        clear: left;
    }
    .form-type-textfield
    {
        border-bottom: 1px solid $seafoam;
        
        input
        {
            display: block;
            border: 0;
            font-size: 1em;
            width: 61.666%;
            padding: 0 1.5%;
            outline-color: $seafoam;
            line-height: 2;
            color: inherit;
            font-weight: 400;
        }
    }
    .commerce-credit-card-expiration
    {
        border-bottom: 1px solid $seafoam;
        overflow: hidden;
    }
    label
    {
        float: left;
        width: 35.333%;
        color: $seafoam;
        font-weight: 500;
        line-height: 2;
    }
}

.confirm-parent, .password-parent
{
    width: auto;
}

.view-commerce-addressbook
{
    margin-top: 2em;
    max-width: 300px;
    
    .views-row
    {
        padding-bottom: 1em;
        margin-bottom: 1em;
        border-bottom: 1px solid #ccc;
    }
}

.page-user .action-tabs
{
    display: none;
}

.view-commerce-backoffice-user-orders
{
    table
    {
        width: 100%;
    }
    th
    {
        font-weight: 400;
    }
    td, th
    {
        border-bottom: 1px solid #e6e6e6;
        padding: 10px;
    }
}

.entity-commerce-order
{
    .order-status
    {
        float: left;
    }
    .tracking-info
    {
        float: right;
        text-align: right;
    }
    .tracking-number
    {
        padding-left: 24px;
        background-repeat: no-repeat;
        background-position: left center;
    }
    .canadapost
    {
        background-image: url(../img/logo_cpc.svg);
    }
    .ups
    {
        background-image: url(../img/logo_ups.svg);
    }
}
.view-products-in-an-order
{
    clear: both;
    
    .view-content
    {
        overflow: hidden;
    }
    .views-row
    {
        float: left;
        width: 23%;
        margin: 0 1% 20px 1%;
        text-align: center;
    }
    .views-field-title
    {
        padding-top: 30px;
        background: url(../img/icon-heart.svg) no-repeat center 14px;
    }
    .views-field-commerce-unit-price
    {
        color: #96d2b7;
        font-weight: bold;
        font-size: 0.777em;
        padding-top: 4px;
    }
}
/* ... */

